# Successor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/fast-cpp-csv-parser/: README.md
lib/fast-cpp-csv-parser/ParseCSV/: csv.h
src/: DataStreamer.hpp  MovingAverageStrategy.cpp  MovingAverageStrategy.hpp  data_streamer.hpp  datastreamer.hpp  main.cpp  moving_average_strategy.cpp  moving_average_strategy.hpp  simple_moving_average.hpp
